--- a/SistemaHospitalUNI/src/Reportes/Expediente.jrxml
+++ b/SistemaHospitalUNI/src/Reportes/Expediente.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="0" uuid="29f0c1f9-87e7-4283-b756-0ba5d7658fbd">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="466"/>
+	<property name="ireport.y" value="207"/>
 	<style name="Title" fontName="Arial" fontSize="26" isBold="true" pdfFontName="Helvetica-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="Arial" fontSize="18"/>
 	<style name="Column header" forecolor="#FFFFFF" fontName="Arial" fontSize="12" isBold="true"/>
@@ -10,6 +10,8 @@
 	<parameter name="id" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
 	</parameter>
+	<parameter name="alergia" class="java.lang.String"/>
+	<parameter name="enfermedad" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[select
    p.nombre,
@@ -17,17 +19,11 @@
     p.direccion,
     p.telefono,
     p.cedula,
-    a.nombre as Alergia,
-    co.nombre as Enfermedad,
     s.barrio,
     s.distrito
 from 
 Paciente p inner join 
-Sector s on s.id_sector = p.id_sector inner join
-padecimiento_am am on am.id_paciente = p.id_paciente inner join
-alergiamedicamento a on a.id_alergia = am.id_alergia inner join
-padecimiento_ec ec on ec.id_paciente = p.id_paciente inner join
-enfermedad_cronica co on co.id_ec = ec.id_ec 
+Sector s on s.id_sector = p.id_sector 
 where p.id_paciente = $P{id}]]>
 	</queryString>
 	<field name="nombre" class="java.lang.String">
@@ -45,8 +41,6 @@ where p.id_paciente = $P{id}]]>
 	<field name="cedula" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="Alergia" class="java.lang.String"/>
-	<field name="Enfermedad" class="java.lang.String"/>
 	<field name="barrio" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -190,11 +184,6 @@ where p.id_paciente = $P{id}]]>
 			<rectangle radius="10">
 				<reportElement x="261" y="93" width="100" height="20" uuid="5985f54d-09db-4add-9dd7-2a77ed29b90f"/>
 			</rectangle>
-			<textField>
-				<reportElement style="Detail" x="261" y="93" width="95" height="20" uuid="683e469b-cd2d-4c9a-ac30-0fe35f371767"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{Alergia}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="382" y="99" width="49" height="14" uuid="8a1aae57-17c0-4873-a033-feca33b06e43"/>
 				<textElement>
@@ -228,11 +217,6 @@ where p.id_paciente = $P{id}]]>
 			<rectangle radius="10">
 				<reportElement x="371" y="135" width="133" height="20" uuid="811c9879-0ce3-4976-9463-57ad8433b004"/>
 			</rectangle>
-			<textField>
-				<reportElement style="Detail" x="371" y="135" width="133" height="20" uuid="61908c64-85f1-4548-b7b2-27466d98000c"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{Enfermedad}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="23" y="192" width="61" height="14" uuid="fe021e45-9cdd-4a51-a676-e5a12b02c5e9"/>
 				<textElement>
@@ -251,6 +235,20 @@ where p.id_paciente = $P{id}]]>
 			<rectangle>
 				<reportElement x="2" y="335" width="553" height="12" backcolor="#99CCFF" uuid="04fb5bc0-1e30-4bfa-a50e-cbd8317fe8b5"/>
 			</rectangle>
+			<textField>
+				<reportElement x="261" y="93" width="100" height="20" uuid="085d7172-7e1b-413a-b3e6-1843d04e74c8"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" size="12" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{alergia}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="371" y="135" width="133" height="20" uuid="d3613473-2b41-49ec-be01-601b020990f4"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{enfermedad}]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnHeader>
 	<detail>
